min-width fix for firefox flex child overflow bug

--- a/sass/core/layout/_row.scss
+++ b/sass/core/layout/_row.scss
@@ -64,6 +64,7 @@ _Includes `table-cell` fallback for IE8._
 	padding-left: $space;
 	@include flex-grow(1);
 	width: auto;
+	min-width: 0;
 	&:first-child {
 		padding-left: 0;
 	}
